еще несколько опечаток

--- a/lection9-10.tex
+++ b/lection9-10.tex
@@ -303,8 +303,8 @@ $Nat : *,\ Integer : *,\ Vect : Nat \rightarrow Integer \rightarrow * \vdash dot
 \subsubsection{$\Pi$-типы и $\Sigma$-типы}
 
 \begin{itemize}
-    \item $\Pi x : \alpha . P(x)$ - эту запись можно читать как (в каком-то смысле в интуционистском понимании): "У меня есть метод для конструирования объекта типа $P(x)$, использующий любой предоставленный $x$ типа $\alpha$". Если же смотреть на эту запись с точки зрения классической логики, то ее можно понимать как бесконечную  конъюнкцию $P(x_1)\&P(x_2)\&...$. Данная конъюнкция соответствует декартовому произведению, отсюда и название $\Pi$-типа (иногда в англоязычной литературе можно встретить \textit{dependent function type}).
-    \item $\Sigma x : \alpha . P(x)$. Аналогично предыдущему пункту рассмотрим значение с интуционистской точки зрения: "У меня есть объект $x$ типа $\alpha$, но больше ничего про него не знаю кроме того, что он обладает свойством $P(x)$". Это как раз в стиле интуционизма, что нам приходится знать и объект $x$ и его свойство $P(x)$. Это можно представить как пару, а пара - бинарное произведение. С точки же зрения классической логики, мы можем принимать эту формулу как бесконечную дизъюнкицю $P(x_1) \vee P(x_2)\vee ...$, которая соответствует алгебраическим типам данных. (иногда в англоязычной литературе можно встретить \textit{dependent sum}).
+    \item $\Pi x : \alpha . P(x)$ - эту запись можно читать как (в каком-то смысле в интуиционистском понимании): "У меня есть метод для конструирования объекта типа $P(x)$, использующий любой предоставленный $x$ типа $\alpha$". Если же смотреть на эту запись с точки зрения классической логики, то ее можно понимать как бесконечную  конъюнкцию $P(x_1)\&P(x_2)\&...$. Данная конъюнкция соответствует декартовому произведению, отсюда и название $\Pi$-типа (иногда в англоязычной литературе можно встретить \textit{dependent function type}).
+    \item $\Sigma x : \alpha . P(x)$. Аналогично предыдущему пункту рассмотрим значение с интуиционистской точки зрения: "У меня есть объект $x$ типа $\alpha$, но больше ничего про него не знаю кроме того, что он обладает свойством $P(x)$". Это как раз в стиле интуиционизма, что нам приходится знать и объект $x$ и его свойство $P(x)$. Это можно представить как пару, а пара - бинарное произведение. С точки же зрения классической логики, мы можем принимать эту формулу как бесконечную дизъюнкицю $P(x_1) \vee P(x_2)\vee ...$, которая соответствует алгебраическим типам данных. (иногда в англоязычной литературе можно встретить \textit{dependent sum}).
 \end{itemize}
 
 Ранее обсуждалось, что тип может быть сопоставлен множеству его значений, как например тип uint32\_t в С++ может быть сопоставлен множеству $\{0, 1, ..., 2^{32} - 1\}$. Рассмотрим $\Pi x : \alpha . P(x)$: этому $\Pi$-типу можно сопоставить прямое произведение $B^A$ (где $A$ --- множество, сопоставленное типу $\alpha$, а $B(a)$ - множество сопоставленное типу $P(a)$), которое следует воспринимать, как $B^A = \prod_{a \in A} B(a) = \{ f : A \rightarrow \bigcup_{a \in A} B(a)\ |\ f(a) \in B(a), a \in A  \}$. Можно отметить, что если $B(a) = C = const$, то на любой вход $f(a) \in C$, т.е. тип значения $f(a)$ не меняется, собственно поэтому этот тип в таком случае записывают как $A \rightarrow P$. Рассмотрим $\Sigma x : \alpha . P(x)$: этому $\Sigma$-типу можно сопоставить дизъюнктное объединение $\sqcup_{a \in A} B(a) = \bigcup_{a \in A}\{(a, x) | x \in B(a)\}$, где $A$ --- множество, сопоставленное типу $\alpha$, а $B(a)$ - множество сопоставленное типу $P(a)$. Тут также можно отметиеть, что если $B(a) = C = const$, то результатом дизъюнктивного объелинения будет прямое произведение $A \times B$. В языке программирования Idris примером $\Sigma$-типа является зависимая пара:
